# Contracts

./: .gitignore  LICENSE  Readme.md  contract_deployment_and_update_addresses_abis.md  lib.rs
Azero_Contracts/: Cargo.toml  clippy.toml  lib.rs
Azero_Contracts/contracts/collection_manager/: Cargo.toml  artzero_collection_manager.contract  artzero_collection_manager.json  artzero_collection_manager.wasm  lib.rs  metadata.json
Azero_Contracts/contracts/launchpad_manager/: Cargo.toml  artzero_launchpad_psp34.contract  artzero_launchpad_psp34.json  artzero_launchpad_psp34.wasm  lib.rs  metadata.json
Azero_Contracts/contracts/marketplace/: Cargo.toml  artzero_marketplace_psp34.contract  artzero_marketplace_psp34.json  artzero_marketplace_psp34.wasm  lib.rs  metadata.json
Azero_Contracts/contracts/poap/: Cargo.toml  lib.rs  metadata.json  poap_nft.contract  poap_nft.wasm
Azero_Contracts/contracts/profile/: Cargo.toml  lib.rs  metadata.json  profile_manager.contract  profile_manager.json  profile_manager.wasm
Azero_Contracts/contracts/proxy/: Cargo.toml  metadata.json  proxy_contract.contract  proxy_contract.wasm
Azero_Contracts/contracts/psp34_launchpad_standard/: Cargo.toml  launchpad_psp34_nft_standard.contract  launchpad_psp34_nft_standard.json  launchpad_psp34_nft_standard.wasm  lib.rs  metadata.json
Azero_Contracts/contracts/psp34_standard/: Cargo.toml  lib.rs  metadata.json  psp34_nft.contract  psp34_nft.json  psp34_nft.wasm
Azero_Contracts/contracts/staking/: Cargo.toml  artzero_staking_nft.contract  artzero_staking_nft.json  artzero_staking_nft.wasm  lib.rs  metadata.json
Azero_Contracts/impls/: mod.rs
Azero_Contracts/impls/admin/: admin.rs
Azero_Contracts/impls/collection_manager/: collection_manager.rs  data.rs  mod.rs
Azero_Contracts/impls/launchpad_manager/: data.rs  launchpad_manager.rs  mod.rs
Azero_Contracts/impls/psp34_nft/: data.rs  mod.rs  psp34_nft.rs
Azero_Contracts/impls/psp34_standard/: data.rs  psp34_standard.rs
Azero_Contracts/impls/staking/: data.rs  mod.rs  staking.rs
Azero_Contracts/impls/upgradable/: mod.rs  upgradable.rs
Azero_Contracts/src/: lib.rs
Azero_Contracts/src/impls/: mod.rs
Azero_Contracts/src/impls/admin/: data.rs
Azero_Contracts/src/impls/collection_manager/: collection_manager.rs  data.rs
Azero_Contracts/src/impls/launchpad_manager/: data.rs  launchpad_manager.rs
Azero_Contracts/src/impls/marketplace/: data.rs  marketplace.rs  mod.rs
Azero_Contracts/src/impls/psp34_launchpad_standard/: data.rs  mod.rs  psp34_launchpad_standard.rs
Azero_Contracts/src/impls/psp34_standard/: data.rs  psp34_standard.rs
Azero_Contracts/src/impls/staking/: staking.rs
Azero_Contracts/src/tests/: 1.profile_test.ts  6.psp34_launchpad_standard_test.ts
Azero_Contracts/src/tests/artifacts/: artzero_staking_nft.contract
Azero_Contracts/src/traits/: collection_manager.rs  error.rs  launchpad_manager.rs  marketplace.rs  mod.rs  psp34_launchpad_standard.rs  staking.rs
Azero_Contracts/tests/: 1.profile_test.ts  2.psp34_standard_test.ts  3.launchpad_manager_test.ts  4.collection_manager_test.ts  5.marketplace.ts  5.marketplace_test.ts  6.psp34_launchpad_standard_test.ts  7.staking_test.ts  collection_manager_test.ts  constants.ts  helpers.ts  launchpad_test.ts  package-lock.json  package.json  psp34_standard_test.ts  readme.md  tsconfig.json
Azero_Contracts/tests/artifacts/: artzero_collection_manager.contract  artzero_collection_manager.json  artzero_launchpad_psp34.contract  artzero_launchpad_psp34.json  artzero_marketplace_psp34.contract  artzero_marketplace_psp34.json  artzero_staking_nft.json  launchpad_psp34_nft_standard.contract  launchpad_psp34_nft_standard.json  profile_manager.contract  profile_manager.json  psp34_nft.contract  psp34_nft.json
Azero_Contracts/tests/typed_contracts/arguments/: artzero_collection_manager.ts  artzero_launchpad_psp34.ts  launchpad_psp34_nft_standard.ts  psp34_nft.ts
Azero_Contracts/tests/typed_contracts/build-extrinsic/: artzero_collection_manager.ts  artzero_launchpad_psp34.ts  artzero_marketplace_psp34.ts  artzero_staking_nft.ts  launchpad_psp34_nft_standard.ts  profile_manager.ts  psp34_nft.ts
Azero_Contracts/tests/typed_contracts/constructors/: artzero_collection_manager.ts  artzero_launchpad_psp34.ts  artzero_marketplace_psp34.ts  artzero_staking_nft.ts  launchpad_psp34_nft_standard.ts  psp34_nft.ts
Azero_Contracts/tests/typed_contracts/contracts/: artzero_collection_manager.ts  artzero_launchpad_psp34.ts  artzero_marketplace_psp34.ts  artzero_staking_nft.ts  launchpad_psp34_nft_standard.ts  psp34_nft.ts
Azero_Contracts/tests/typed_contracts/data/: artzero_collection_manager.json  artzero_launchpad_psp34.json  artzero_marketplace_psp34.json  artzero_staking_nft.json  profile_manager.json  psp34_nft.json
Azero_Contracts/tests/typed_contracts/event-data/: artzero_collection_manager.json  artzero_launchpad_psp34.json  artzero_marketplace_psp34.json  artzero_staking_nft.json
Azero_Contracts/tests/typed_contracts/event-types/: artzero_launchpad_psp34.ts  artzero_marketplace_psp34.ts  artzero_staking_nft.ts  profile_manager.ts  psp34_nft.ts
Azero_Contracts/tests/typed_contracts/events/: artzero_launchpad_psp34.ts  artzero_staking_nft.ts  launchpad_psp34_nft_standard.ts  profile_manager.ts  psp34_nft.ts
Azero_Contracts/traits/: admin.rs  collection_manager.rs  error.rs  launchpad_manager.rs  mod.rs  psp34.rs  psp34_standard.rs  staking.rs  upgradable.rs
Standard_Contracts/: Cargo.toml
Standard_Contracts/contracts/psp34_standard/: Cargo.toml  lib.rs  metadata.json  psp34_nft.contract  psp34_nft.wasm
Standard_Contracts/src/impls/: mod.rs
Standard_Contracts/src/traits/: admin.rs  error.rs  mod.rs  psp34_standard.rs
contracts-1155/Standard-PSP1155-NFT/: Cargo.toml  lib.rs
contracts/OpenBrush-ERC1155-PSP1155-Standard/: Cargo.toml  lib.rs
contracts/OpenBrush-ERC721-PSP34-Standard/: Cargo.toml  lib.rs  metadata.json  psp34_nft.contract  psp34_nft.wasm
contracts/OpenBrush-Proxy/: Cargo.toml  lib.rs  metadata.json  proxy_contract.contract  proxy_contract.wasm
(+188 files in other folders)
