[package]
name = "psp34_nft"
version = "1.1.0"
authors = ["ArtZero <admin@artzero.io>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "~3.2.0", default-features = false }
ink_metadata = { version = "~3.2.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.2.0", default-features = false }
ink_storage = { version = "~3.2.0", default-features = false }
ink_lang = { version = "~3.2.0", default-features = false }
ink_prelude = { version = "~3.2.0", default-features = false }
ink_engine = { version = "~3.2.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { tag = "v2.0.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable","psp34"] }

[lib]
name = "psp34_nft"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false
